--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,8 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.3.15"
+    "angular": "~1.3.15",
+    "angular-route": "~1.3.15",
+    "bootstrap": "~3.3.4"
   }
 }
