--- a/package.json
+++ b/package.json
@@ -20,9 +20,21 @@
   },
   "homepage": "https://github.com/neolee11/ToDoList_Angular",
   "devDependencies": {
-    "gulp": "^3.8.11"
+    "del": "^1.1.1",
+    "gulp": "^3.8.11",
+    "gulp-autoprefixer": "^2.2.0",
+    "gulp-if": "^1.2.5",
+    "gulp-inject": "^1.2.0",
+    "gulp-jscs": "^1.6.0",
+    "gulp-jshint": "^1.10.0",
+    "gulp-less": "^3.0.3",
+    "gulp-plumber": "^1.0.0",
+    "gulp-util": "^3.0.4",
+    "jshint-stylish": "^1.0.2",
+    "wiredep": "^2.2.2"
   },
   "dependencies": {
+    "express": "^4.12.3",
     "node": "0.0.0"
   }
 }
