--- a/.jshintrc
+++ b/.jshintrc
@@ -15,7 +15,7 @@
   "nonbsp": true,
   "nonew": true,
   "plusplus": false,
-  "quotmark": "single",
+  "quotmark": "both",
   "undef": true,
   "unused": false,
   "strict": false,
@@ -23,7 +23,7 @@
   "maxdepth": 5,
   "maxstatements": 40,
   "maxcomplexity": 8,
-  "maxlen": 120,
+//  "maxlen": 120,
 
   "asi": false,
   "boss": false,
@@ -56,6 +56,14 @@
 
   "globals": {
     "angular": false,
-    "$": false
+    "$": false,
+    /* MOCHA */
+    "describe"   : false,
+    "it"         : false,
+    "before"     : false,
+    "beforeEach" : false,
+    "after"      : false,
+    "afterEach"  : false,
+    "expect"     : false
   }
 }
