--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "gulp-uglify": "^1.2.0",
     "gulp-useref": "^1.1.2",
     "gulp-util": "^3.0.4",
+    "jscs": "^1.13.1",
     "jshint-stylish": "^1.0.2",
     "karma": "^0.12.31",
     "karma-chai": "^0.1.0",
